Update phaser and readme

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,32 +4,28 @@
   "suppressTaskName": true,
   "command": "npm",
   "isShellCommand": true,
-  
   "tasks": [
     {
-      //Build Task
       "taskName": "build",
-      //Run On Shift+Ctrl+B
       "isBuildCommand": true,
-      //Don't run when Shift+Ctrl+T
       "isTestCommand": false,
-      // Show the output window if error any
       "showOutput": "silent",
-      //Npm Task Name
       "args": [
-        "run", "compile:ts"
+        "run",
+        "compile:ts"
+      ],
+      "problemMatcher": [
+        "$eslint-compact"
       ]
     },
     {
-      //Test Task   
       "taskName": "install",
-      // Don't run on Shift+Ctrl+B
       "isBuildCommand": false,
-      // Run on Shift+Ctrl+T
       "isTestCommand": true,
       "showOutput": "always",
       "args": [
-        "run", "inst"
+        "run",
+        "inst"
       ]
     }
   ]
